// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tool Schema Snapshots > Tool: pubmed_cite > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "pmids": {
      "description": "PubMed IDs to cite",
      "items": {
        "pattern": "^\\d+$",
        "type": "string",
      },
      "maxItems": 50,
      "minItems": 1,
      "type": "array",
    },
    "styles": {
      "default": [
        "apa",
      ],
      "description": "Citation styles to generate",
      "items": {
        "enum": [
          "apa",
          "mla",
          "bibtex",
          "ris",
        ],
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "pmids",
    "styles",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_cite > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "citations": {
      "description": "Citations per article",
      "items": {
        "additionalProperties": false,
        "properties": {
          "citations": {
            "additionalProperties": {
              "type": "string",
            },
            "propertyNames": {
              "type": "string",
            },
            "type": "object",
          },
          "pmid": {
            "type": "string",
          },
          "title": {
            "type": "string",
          },
        },
        "required": [
          "pmid",
          "citations",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "citations",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_fetch > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "includeGrants": {
      "default": false,
      "description": "Include grant information",
      "type": "boolean",
    },
    "includeMesh": {
      "default": true,
      "description": "Include MeSH terms",
      "type": "boolean",
    },
    "pmids": {
      "description": "PubMed IDs to fetch",
      "items": {
        "pattern": "^\\d+$",
        "type": "string",
      },
      "maxItems": 200,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "pmids",
    "includeMesh",
    "includeGrants",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_fetch > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "articles": {
      "description": "Parsed articles",
      "items": {
        "additionalProperties": false,
        "properties": {
          "abstractText": {
            "description": "Abstract text",
            "type": "string",
          },
          "affiliations": {
            "description": "Deduplicated author affiliations",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "articleDates": {
            "description": "Article dates (e.g. electronic publication, received, accepted)",
            "items": {
              "additionalProperties": false,
              "properties": {
                "dateType": {
                  "description": "Date type (e.g. "Electronic", "received")",
                  "type": "string",
                },
                "day": {
                  "description": "Day",
                  "type": "string",
                },
                "month": {
                  "description": "Month",
                  "type": "string",
                },
                "year": {
                  "description": "Year",
                  "type": "string",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "authors": {
            "description": "Author list",
            "items": {},
            "type": "array",
          },
          "doi": {
            "description": "Digital Object Identifier",
            "type": "string",
          },
          "grantList": {
            "description": "Grant information",
            "items": {},
            "type": "array",
          },
          "journalInfo": {
            "description": "Journal information",
          },
          "keywords": {
            "description": "Keywords",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "meshTerms": {
            "description": "MeSH terms",
            "items": {},
            "type": "array",
          },
          "pmcId": {
            "description": "PubMed Central ID (e.g. PMC1234567)",
            "type": "string",
          },
          "pmcUrl": {
            "description": "PubMed Central full text URL (when available)",
            "type": "string",
          },
          "pmid": {
            "description": "PubMed ID",
            "type": "string",
          },
          "publicationTypes": {
            "description": "Publication types",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "pubmedUrl": {
            "description": "PubMed article URL",
            "type": "string",
          },
          "title": {
            "description": "Article title",
            "type": "string",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
    "totalReturned": {
      "description": "Number of articles returned",
      "type": "number",
    },
  },
  "required": [
    "articles",
    "totalReturned",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_mesh_lookup > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "includeDetails": {
      "default": true,
      "description": "Fetch full MeSH records (scope notes, tree numbers, entry terms)",
      "type": "boolean",
    },
    "maxResults": {
      "default": 10,
      "description": "Maximum results",
      "maximum": 50,
      "minimum": 1,
      "type": "integer",
    },
    "term": {
      "description": "MeSH term to look up",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "term",
    "maxResults",
    "includeDetails",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_mesh_lookup > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "results": {
      "description": "Matching MeSH records",
      "items": {
        "additionalProperties": false,
        "properties": {
          "entryTerms": {
            "description": "Synonyms / entry terms",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "meshId": {
            "description": "MeSH descriptor unique identifier",
            "type": "string",
          },
          "name": {
            "description": "Descriptor name",
            "type": "string",
          },
          "scopeNote": {
            "description": "Scope note describing the descriptor",
            "type": "string",
          },
          "treeNumbers": {
            "description": "MeSH tree number(s)",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
        },
        "required": [
          "meshId",
          "name",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "term": {
      "description": "Original search term",
      "type": "string",
    },
  },
  "required": [
    "term",
    "results",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_pmc_fetch > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "includeReferences": {
      "default": false,
      "description": "Include reference list from back matter",
      "type": "boolean",
    },
    "maxSections": {
      "description": "Maximum number of top-level body sections to return",
      "maximum": 50,
      "minimum": 1,
      "type": "integer",
    },
    "pmcids": {
      "description": "PMC IDs to fetch (e.g., ["PMC9575052"] or ["9575052"]). Provide pmcids or pmids, not both.",
      "items": {
        "type": "string",
      },
      "maxItems": 10,
      "minItems": 1,
      "type": "array",
    },
    "pmids": {
      "description": "PubMed IDs to resolve to PMC articles via ELink. Only articles available in PMC will be returned.",
      "items": {
        "pattern": "^\\d+$",
        "type": "string",
      },
      "maxItems": 10,
      "minItems": 1,
      "type": "array",
    },
    "sections": {
      "description": "Filter to specific sections by title (case-insensitive match, e.g., ["methods", "results"])",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "includeReferences",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_pmc_fetch > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "definitions": {
    "__schema0": {
      "additionalProperties": false,
      "properties": {
        "label": {
          "description": "Section label (e.g., "1", "2.1")",
          "type": "string",
        },
        "subsections": {
          "description": "Nested subsections",
          "items": {
            "$ref": "#/definitions/__schema0",
          },
          "type": "array",
        },
        "text": {
          "description": "Section body text",
          "type": "string",
        },
        "title": {
          "description": "Section heading",
          "type": "string",
        },
      },
      "required": [
        "text",
      ],
      "type": "object",
    },
  },
  "properties": {
    "articles": {
      "description": "Parsed full-text articles",
      "items": {
        "additionalProperties": false,
        "properties": {
          "abstract": {
            "description": "Article abstract",
            "type": "string",
          },
          "affiliations": {
            "description": "Author affiliations",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "articleType": {
            "description": "Article type (e.g., "research-article")",
            "type": "string",
          },
          "authors": {
            "description": "Author list",
            "items": {
              "additionalProperties": false,
              "properties": {
                "collectiveName": {
                  "type": "string",
                },
                "givenNames": {
                  "type": "string",
                },
                "lastName": {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "doi": {
            "description": "Digital Object Identifier",
            "type": "string",
          },
          "journal": {
            "description": "Journal information",
          },
          "keywords": {
            "description": "Article keywords",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "pmcId": {
            "description": "PubMed Central ID",
            "type": "string",
          },
          "pmcUrl": {
            "description": "PMC article URL",
            "type": "string",
          },
          "pmid": {
            "description": "PubMed ID",
            "type": "string",
          },
          "publicationDate": {
            "description": "Publication date",
          },
          "pubmedUrl": {
            "description": "PubMed article URL",
            "type": "string",
          },
          "references": {
            "description": "Reference list",
            "items": {
              "additionalProperties": false,
              "properties": {
                "citation": {
                  "type": "string",
                },
                "id": {
                  "type": "string",
                },
                "label": {
                  "type": "string",
                },
              },
              "required": [
                "citation",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "sections": {
            "description": "Article body sections with full text",
            "items": {
              "$ref": "#/definitions/__schema0",
            },
            "type": "array",
          },
          "title": {
            "description": "Article title",
            "type": "string",
          },
        },
        "required": [
          "pmcId",
          "pmcUrl",
          "sections",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "totalReturned": {
      "description": "Number of articles returned",
      "type": "number",
    },
    "unavailablePmids": {
      "description": "PMIDs that could not be resolved to PMC articles",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "articles",
    "totalReturned",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_related > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "maxResults": {
      "default": 10,
      "description": "Maximum related articles",
      "maximum": 50,
      "minimum": 1,
      "type": "integer",
    },
    "pmid": {
      "description": "Source PubMed ID",
      "pattern": "^\\d+$",
      "type": "string",
    },
    "relationship": {
      "default": "similar",
      "description": "Type of relationship",
      "enum": [
        "similar",
        "cited_by",
        "references",
      ],
      "type": "string",
    },
  },
  "required": [
    "pmid",
    "relationship",
    "maxResults",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_related > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "articles": {
      "description": "Related articles",
      "items": {
        "additionalProperties": false,
        "properties": {
          "authors": {
            "type": "string",
          },
          "pmid": {
            "type": "string",
          },
          "score": {
            "type": "number",
          },
          "title": {
            "type": "string",
          },
        },
        "required": [
          "pmid",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "relationship": {
      "description": "Relationship type used",
      "type": "string",
    },
    "sourcePmid": {
      "description": "Source PubMed ID",
      "type": "string",
    },
    "totalFound": {
      "description": "Total related articles found before truncation",
      "type": "number",
    },
  },
  "required": [
    "sourcePmid",
    "relationship",
    "articles",
    "totalFound",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_search > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "author": {
      "description": "Filter by author name (e.g. "Smith J")",
      "type": "string",
    },
    "dateRange": {
      "additionalProperties": false,
      "description": "Filter by date range (YYYY-MM-DD)",
      "properties": {
        "dateType": {
          "default": "pdat",
          "description": "Date type: pdat (publication), mdat (modification), edat (entrez)",
          "enum": [
            "pdat",
            "mdat",
            "edat",
          ],
          "type": "string",
        },
        "maxDate": {
          "description": "End date (YYYY-MM-DD)",
          "type": "string",
        },
        "minDate": {
          "description": "Start date (YYYY-MM-DD)",
          "type": "string",
        },
      },
      "required": [
        "minDate",
        "maxDate",
        "dateType",
      ],
      "type": "object",
    },
    "freeFullText": {
      "description": "Only include free full text articles",
      "type": "boolean",
    },
    "hasAbstract": {
      "description": "Only include articles with abstracts",
      "type": "boolean",
    },
    "journal": {
      "description": "Filter by journal name",
      "type": "string",
    },
    "language": {
      "description": "Filter by language (e.g. "english")",
      "type": "string",
    },
    "maxResults": {
      "default": 20,
      "description": "Maximum results to return",
      "maximum": 1000,
      "minimum": 1,
      "type": "integer",
    },
    "meshTerms": {
      "description": "Filter by MeSH terms (e.g. ["Neoplasms", "Humans"])",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "offset": {
      "default": 0,
      "description": "Result offset for pagination (0-based). Use with maxResults to page through results",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "publicationTypes": {
      "description": "Filter by publication type",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "query": {
      "description": "PubMed search query (supports full NCBI syntax)",
      "minLength": 1,
      "type": "string",
    },
    "sort": {
      "default": "relevance",
      "description": "Sort order",
      "enum": [
        "relevance",
        "pub_date",
        "author",
        "journal",
      ],
      "type": "string",
    },
    "species": {
      "description": "Filter by species",
      "enum": [
        "humans",
        "animals",
      ],
      "type": "string",
    },
    "summaryCount": {
      "default": 0,
      "description": "Fetch brief summaries for top N results (0 = PMIDs only)",
      "maximum": 50,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "query",
    "maxResults",
    "offset",
    "sort",
    "summaryCount",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_search > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "offset": {
      "description": "Result offset used",
      "type": "number",
    },
    "pmids": {
      "description": "PubMed IDs",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "query": {
      "description": "Original query",
      "type": "string",
    },
    "searchUrl": {
      "description": "PubMed search URL",
      "type": "string",
    },
    "summaries": {
      "description": "Brief summaries",
      "items": {
        "additionalProperties": false,
        "properties": {
          "authors": {
            "type": "string",
          },
          "doi": {
            "type": "string",
          },
          "pmcId": {
            "type": "string",
          },
          "pmcUrl": {
            "type": "string",
          },
          "pmid": {
            "type": "string",
          },
          "pubDate": {
            "type": "string",
          },
          "pubmedUrl": {
            "type": "string",
          },
          "source": {
            "type": "string",
          },
          "title": {
            "type": "string",
          },
        },
        "required": [
          "pmid",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "totalFound": {
      "description": "Total matching articles",
      "type": "number",
    },
  },
  "required": [
    "query",
    "totalFound",
    "offset",
    "pmids",
    "searchUrl",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_spell > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "query": {
      "description": "Query to spell-check",
      "minLength": 2,
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pubmed_spell > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "corrected": {
      "description": "Corrected query (same as original if no suggestion)",
      "type": "string",
    },
    "hasSuggestion": {
      "description": "Whether NCBI suggested a correction",
      "type": "boolean",
    },
    "original": {
      "description": "Original query",
      "type": "string",
    },
  },
  "required": [
    "original",
    "corrected",
    "hasSuggestion",
  ],
  "type": "object",
}
`;
